fix webpack in production mode

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,9 @@
     "main": "Home",
     "about": "About",
     "articles": "Articles"
+  },
+  "languages": {
+    "ru": "Russian",
+    "en": "English"
   }
 }
