--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,9 @@
   "main": "Главная",
   "about": "О нас",
   "articles": "Статьи"
+ },
+ "languages": {
+  "ru": "Русский",
+  "en": "Английский"
  }
 }
