--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,14 +1,20 @@
 {
- "nav_links": {
-  "main": "Главная",
-  "about": "О нас",
-  "articles": "Статьи"
- },
- "languages": {
-  "ru": "Русский",
-  "en": "Английский"
- },
- "not_found_page": {
-  "title": "Страница не найдена"
- }
+  "nav_links": {
+    "main": "Главная",
+    "about": "О нас",
+    "articles": "Статьи"
+  },
+  "languages": {
+    "ru": "Русский",
+    "en": "Английский"
+  },
+  "not_found_page": {
+    "title": "Страница не найдена"
+  },
+  "authorization": {
+    "login": "Логин",
+    "password": "Пароль",
+    "title": "Авторизация",
+    "enter": "Войти"
+  }
 }
