add profile page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
   "nav_links": {
     "articles": "Articles",
     "my_articles": "My articles",
-    "account": "Personal account"
+    "profile": "Profile"
   },
   "languages": {
     "ru": "Russian",
