--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,7 +2,7 @@
   "nav_links": {
     "articles": "Статьи",
     "my_articles": "Мои статьи",
-    "account": "Личный кабинет"
+    "profile": "Аккаунт"
   },
   "languages": {
     "ru": "Русский",
